fixed the overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,10 @@
   width: 100%;
 }
 
+.pages {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  overflow-y: auto;
+  height: 88vh;
+}
